<resources>
    <string name="app_name">AFE工厂系统</string>
    <string name="action_settings">Settings</string>
    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>
    <string name="camera_pop_camera">相机拍摄</string>

    <string name="camera_pop_album">从相册选取</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="Enterprisecode">企业编号</string>
    <string name="Username">用户名</string>
    <string name="camera_pop_cancel">取消</string>
    <string name="Password">密码</string>
    <string name="Rememberpassword">记住密码</string>
    <string name="Signin">登录</string>
    <string name="Loggingin">正在登录....</string>
    <string name="refresh">下拉刷新</string>
    <string name="release">释放立即刷新</string>
    <string name="Refreshing">正在刷新...</string>
    <string name="Refreshfinish">刷新完成</string>
    <string name="oldpassword">旧密码</string>
    <string name="newPassword">新密码</string>
    <string name="homepage">首页</string>
    <string name="Order">订单</string>
    <string name="Notice">公告</string>
    <string name="editpassword">修改密码</string>
    <string name="signout">退出</string>
    <string name="confirmPassword">确认密码</string>
    <string name="changepassword">修改密码</string>
    <string name="title">旧密码不正确！</string>
    <string name="ts">新密码不能为空!</string>
    <string name="ts1">两次密码输入不一致!</string>
    <string name="save">正在保存...</string>
    <string name="ok">确定</string>
    <string name="cel">取消</string>
    <string name="content">第一，管理员发起设备维修或者保养申请\n\n第二，部门领导进行确认以及输入费用明细\n\n第三，监控审计部门进行费用确认\n\n发票说明\n\n所有的维修或者保养都是先票后款原则，请相关执行人注意细节。</string>
</resources>
