<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/login_bg"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/logo" />
        <TextView
            android:text="迪锐克斯工厂系统"
            android:id="@+id/title"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <com.example.zhujia.dxracer_factory.Tools.ClearEditText
            android:layout_marginTop="10dp"
            android:inputType="number"

            android:id="@+id/input_enterprisenumber"
            android:drawableLeft="@mipmap/qybm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edshap"
            android:alpha="0.8"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/Enterprisecode" >


        </com.example.zhujia.dxracer_factory.Tools.ClearEditText>




        <!--  Email Label -->



        <com.example.zhujia.dxracer_factory.Tools.ClearEditText
            android:drawableLeft="@mipmap/yhm"
            android:layout_marginTop="10dp"
            android:background="@drawable/edshap"
            android:alpha="0.8"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:id="@+id/input_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username" />

        <!--  Password Label -->

        <com.example.zhujia.dxracer_factory.Tools.ClearEditText
            android:drawableLeft="@mipmap/mima"
            android:layout_marginTop="10dp"
            android:background="@drawable/edshap"
            android:alpha="0.8"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/Password"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <CheckBox
                android:id="@+id/remember"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rememberpassword"
                android:textColor="@color/white"
                />


        </RelativeLayout>




        <android.support.v7.widget.AppCompatButton
            android:background="@drawable/shap"
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/Signin"/>



    </LinearLayout>
</ScrollView>