<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <LinearLayout
            android:background="@color/primary"
            android:layout_weight="1.1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changepassword"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newPassword"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/monsoon"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    tools:ignore="Deprecated"
                    android:textColorHint="@color/base"
                    android:textColor="@color/monsoon"
                    android:inputType="textPassword"
                    android:editable="false"
                    android:drawableLeft="@mipmap/edpass"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:id="@+id/newPassword"
                    android:background="@drawable/edit_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/type_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmPassword"
                    android:textColor="@color/monsoon"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    tools:ignore="Deprecated"
                    android:textColorHint="@color/base"
                    android:textColor="@color/monsoon"
                    android:inputType="textPassword"
                    android:editable="false"
                    android:drawableLeft="@mipmap/edpass"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:id="@+id/confirmPassword"
                    android:background="@drawable/edit_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    />
            </LinearLayout>



        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
